--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
     <!--MDL-->
-    <link rel="stylesheet" href="../../Style/Material/material.min.css">
-    <script src="../../Style/Material/material.min.js"></script>
+    <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
+    <script src="../../Resources/Style/Material/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
 
@@ -16,11 +16,12 @@
     <script src="../../Resources/js/tether.min.js"></script>
 
     <!--BOOTSTRAP-->
-    <link href="../../Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../Style/Bootstrap/simplex.bootstrap.min.css">
+    <link href="../../Resources/Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../Resources/Style/Bootstrap/simplex.bootstrap.min.css">
 
     <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../Resources/css/shared-styles.css">
 
     <!--Google Analytics-->
     <script src="../../Resources/js/analytics.js"></script>
@@ -31,11 +32,8 @@
     <!--Custom Scripts-->
     <script src="settings-workflow.js"></script>
     <script src="../../Background/Provider.js"></script>
-    <script src="../global-translation.js"></script>
+    <script src="../../Resources/js/global-translation.js"></script>
     <script src="translation.js"></script>
-
-    <!--idGenerator-->
-    <script src="../../Resources/js/IdGenerator.js"></script>
 
     <!--Lodash-->
     <script src="../../Resources/js/lodash.js"></script>
@@ -46,27 +44,18 @@
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand">Simple Tab Saver</a>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav navbar-left">
-                <!--<li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>-->
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>-->
-            </ul>
-        </div>
+        <a class="navbar-brand" href="../Settings/settings.html">Simple Tab Saver</a>
     </div>
 </div>
 
 <main class="container">
 
     <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
-        <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
-            <li class=""><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
-            <li class=""><a id="menuDonate" href="../Donate/donate.html">PayPal</a></li>
+        <ul class="nav nav-pills flex-column">
+            <li class="nav-item"><a id="menuHistorial" href="../History/history.html">Historial</a></li>
+            <li class="nav-item active"><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
+            <li class="nav-item"><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
+            <li class="nav-item"><a id="menuDonate" href="../More/more.html">Más</a></li>
         </ul>
     </section>
 
@@ -132,6 +121,31 @@
 <!--            con el boton derecho.-->
 <!--            </small>-->
 <!--            </h4>-->
+        </div>
+
+        <!--PRIVACY-->
+        <div class="jumbotron text-left">
+            <h2 id="configTitol-Privacy" style="margin-top: -15px">Privacidad</h2>
+            <h4>
+                <small id="configSubtitol-Privacy" class="text-info"></small>
+            </h4>
+            <ul class="nav nav-stacked">
+                <li>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label class="" for="optionSimple">
+                                    <input type="checkbox" id="optionNoSync" class="" name="options" value="1">
+                                    <span class="" style="font-size: 15px"><b id="configNoSync">Almacenamiento local</b>
+                                        <small> - <l id="configNoSyncText">Deshabilita la sincronización de sus pestañas entre dispositivos</l></small>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <br>
+            </ul>
         </div>
 
         <!--IDIOMA-->
