--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
     <!--MDL-->
-    <link rel="stylesheet" href="../../Style/Material/material.min.css">
-    <script src="../../Style/Material/material.min.js"></script>
+    <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
+    <script src="../../Resources/Style/Material/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
 
@@ -17,11 +17,12 @@
     <script src="../../Resources/js/tether.min.js"></script>
 
     <!--BOOTSTRAP-->
-    <link href="../../Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../Style/Bootstrap/simplex.bootstrap.min.css">
+    <link href="../../Resources/Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../Resources/Style/Bootstrap/simplex.bootstrap.min.css">
 
     <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../Resources/css/shared-styles.css">
 
     <!--Google Analytics-->
     <script src="../../Resources/js/analytics.js"></script>
@@ -30,11 +31,8 @@
     <script src="../../Resources/js/global-shortcuts.js"></script>
 
     <!--Custom Scripts-->
-    <script src="../global-translation.js"></script>
+    <script src="../../Resources/js/global-translation.js"></script>
     <script src="translation.js"></script>
-
-    <!--idGenerator-->
-    <script src="../../Resources/js/IdGenerator.js"></script>
 
     <!--Lodash-->
     <script src="../../Resources/js/lodash.js"></script>
@@ -46,27 +44,18 @@
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand">Simple Tab Saver</a>
-        </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav navbar-left">
-                <!--<li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>-->
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>-->
-            </ul>
-        </div>
+        <a class="navbar-brand" href="../Settings/settings.html">Simple Tab Saver</a>
     </div>
 </div>
 
 <main class="container">
 
     <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
-        <ul class="nav nav-pills nav-stacked">
-            <li class=""><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
-            <li class="active"><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
-            <li class=""><a id="menuDonate" href="../Donate/donate.html">PayPal</a></li>
+        <ul class="nav nav-pills flex-column">
+            <li class="nav-item"><a id="menuHistorial" href="../History/history.html">Historial</a></li>
+            <li class="nav-item"><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
+            <li class="nav-item active"><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
+            <li class="nav-item"><a id="menuDonate" href="../More/more.html">Más</a></li>
         </ul>
     </section>
 
@@ -103,6 +92,13 @@
                             <div class="col-sm-12">
                                 <label class="">
                                     <span class="" style="font-size: 15px"><b id="atajosEntrada2">Internos</b><l>:</l></span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span> <l id="atajosSubentrada2_0">Historial</l><l>:</l> <span class="label label-info">H</span> </span>
                                 </label>
                             </div>
                         </div>
